--- a/blueprints/ente-server/kustomization.yml
+++ b/blueprints/ente-server/kustomization.yml
@@ -4,7 +4,7 @@ configMapGenerator:
       - configs.env
   - name: ente-server-files
     files:
-      - prod.yaml=config.yml
+      - config.yml
 
 resources:
   - externalsecret.yml
