fix(ente): revert to local for now

--- a/blueprints/ente-server/config.yml
+++ b/blueprints/ente-server/config.yml
@@ -39,7 +39,7 @@ listmonk:
   password:
   server-url:
   username:
-log-file: ""
+log-file: /dev/stdout
 replication:
   enabled: false
   tmp-storage: tmp/replication
