--- a/blueprints/alloy/helmrelease.yml
+++ b/blueprints/alloy/helmrelease.yml
@@ -1,3 +1,4 @@
+---
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
@@ -15,8 +16,14 @@ spec:
     createNamespace: true
   interval: 1h
   releaseName: alloy
+  suspend: false
   targetNamespace: monitoring
+  values:
+    alloy:
+      configMap:
+        create: false
+        key: alloy.hcl
+        name: alloy-config-hcl
   valuesFrom:
     - kind: ConfigMap
       name: alloy
-  suspend: false
