--- a/blueprints/alloy/kustomizeconfig.yml
+++ b/blueprints/alloy/kustomizeconfig.yml
@@ -5,3 +5,5 @@ nameReference:
     fieldSpecs:
       - path: spec/valuesFrom/name
         kind: HelmRelease
+      - path: spec/values/alloy/configMap/name
+        kind: HelmRelease
