--- a/kubernetes/newsletter-server/monitoring/kustomization.yml
+++ b/kubernetes/newsletter-server/monitoring/kustomization.yml
@@ -28,5 +28,6 @@ resources:
   - vlogs-victorialogs.yml
   - vmalertmanagerconfig.yml
   - vmservicescrape-haproxy.yml
+  - datasource-tempo.yml
 
 namespace: monitoring
