chore: remove pvc from grafana

--- a/blueprints/grafana-instance/datasource.yml
+++ b/blueprints/grafana-instance/datasource.yml
@@ -64,7 +64,7 @@ spec:
     basicAuth: false
     database: ""
     editable: false
-    isDefault: true
+    isDefault: false
     jsonData:
       derivedFields:
         - datasourceUid: Loki
