--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
       - name: "Checkout"
         uses: actions/checkout@v4
       - env:
-          TG_HCLFMT_EXCLUDE_DIR: ./blueprints
+          TG_HCLFMT_EXCLUDE_DIR: blueprints
         name: Check terragrunt HCL
         uses: gruntwork-io/terragrunt-action@v2
         with:
