--- a/blueprints/grafana-instance/datasource.yml
+++ b/blueprints/grafana-instance/datasource.yml
@@ -83,5 +83,5 @@ spec:
       dashboards: grafana
   plugins:
     - name: victoriametrics-logs-datasource
-      version: v0.14.3
+      version: 0.15.0
   resyncPeriod: 10m
