--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,11 +2,12 @@ ci:
     autofix_commit_msg: |
         [pre-commit.ci] auto fixes from pre-commit.com hooks
 
-        for more information, see https://pre-commit.ci
-
         [skip ci]
     autofix_prs: true
-    autoupdate_commit_msg: '[pre-commit.ci] pre-commit autoupdate'
+    autoupdate_commit_msg: |
+      [pre-commit.ci] pre-commit autoupdate
+
+      [skip ci]
     autoupdate_schedule: weekly
     skip:
       - tofu_fmt
