--- a/blueprints/ente-server/kustomization.yml
+++ b/blueprints/ente-server/kustomization.yml
@@ -24,6 +24,7 @@ resources:
 
 images:
   - name: ghcr.io/meysam81/ente-docker/ente-server
+    # renovate: docker=ghcr.io/meysam81/ente-docker/ente-server
     newTag: "20250311-arm64"
 
 labels:
