--- a/kubernetes/newsletter-server/gateway/kustomization.yml
+++ b/kubernetes/newsletter-server/gateway/kustomization.yml
@@ -7,6 +7,7 @@ resources:
 
 images:
   - name: ghcr.io/meysam81/default-backend
-    newTag: "13068215615"
+    # renovate: docker=ghcr.io/meysam81/default-backend
+    newTag: v1.1.5
 
 namespace: cert-manager
