--- a/blueprints/grafana-instance/grafana.yml
+++ b/blueprints/grafana-instance/grafana.yml
@@ -112,6 +112,7 @@ spec:
                   value: configmap
                 - name: SKIP_TLS_VERIFY
                   value: "true"
+              # renovate: docker=ghcr.io/kiwigrid/k8s-sidecar
               image: ghcr.io/kiwigrid/k8s-sidecar:1.29.1
               name: k8s-sidecar
               volumeMounts:
