--- a/kubernetes/newsletter-server/monitoring/vlogs-victorialogs.yml
+++ b/kubernetes/newsletter-server/monitoring/vlogs-victorialogs.yml
@@ -5,7 +5,8 @@ metadata:
   name: victorialogs
 spec:
   image:
-    tag: v1.14.0-victorialogs-scratch
+    # renovate: docker=victoriametrics/victoria-logs
+    tag: v1.17.0-victorialogs-scratch
   removePvcAfterDelete: false
   replicaCount: 1
   retentionPeriod: 1y
