--- a/blueprints/kratos-selfservice-ui-node/configs.env
+++ b/blueprints/kratos-selfservice-ui-node/configs.env
@@ -2,3 +2,4 @@ CSRF_COOKIE_NAME=ory_kratos_session
 KRATOS_ADMIN_URL=http://kratos-admin.auth
 KRATOS_BROWSER_URL=https://auth-server.developer-friendly.blog
 KRATOS_PUBLIC_URL=http://kratos-public.auth
+HYDRA_ADMIN_URL=http://hydra-admin.auth
