chore(auth): add hydra url to kratos

--- a/blueprints/kratos/kratos-server-config.yml
+++ b/blueprints/kratos/kratos-server-config.yml
@@ -25,6 +25,8 @@ log:
   format: json
   leak_sensitive_values: true
   level: debug
+oauth2_provider:
+  url: https://oauth2.developer-friendly.blog/
 secrets:
   cipher:
     - OVERRIDDEN_BY_ENVS
