--- a/blueprints/kratos/kustomization.yml
+++ b/blueprints/kratos/kustomization.yml
@@ -18,93 +18,13 @@ resources:
   - rule.yml
   - ciliumnetworkpolicy.yml
 
+images:
+  - name: oryd/kratos
+    newTag: v1.3.1-distroless
+
 patches:
-  - patch: |
-      - op: add
-        path: /spec/template/spec/initContainers/0/envFrom/-
-        value:
-          secretRef:
-            name: kratos
-      - op: add
-        path: /spec/template/spec/containers/0/envFrom/-
-        value:
-          secretRef:
-            name: kratos
-      - op: add
-        path: /spec/template/spec/containers/1/envFrom/-
-        value:
-          secretRef:
-            name: kratos
+  - path: deployment-patch.yml
     target:
       kind: Deployment
-      name: kratos
-  - patch: |
-      - op: add
-        path: /spec/template/spec/initContainers/0/volumeMounts/-
-        value:
-          mountPath: /etc/kratos-schemas
-          name: kratos-schemas
-          readOnly: true
-      - op: add
-        path: /spec/template/spec/containers/0/volumeMounts/-
-        value:
-          mountPath: /etc/kratos-schemas
-          name: kratos-schemas
-          readOnly: true
-      - op: add
-        path: /spec/template/spec/containers/1/volumeMounts/-
-        value:
-          mountPath: /etc/kratos-schemas
-          name: kratos-schemas
-          readOnly: true
-      - op: add
-        path: /spec/template/spec/volumes/-
-        value:
-          configMap:
-            defaultMode: 0444
-            items:
-              - key: admin.schema.json
-                path: admin.schema.json
-            name: kratos-schemas
-            optional: false
-          name: kratos-schemas
-    target:
-      kind: Deployment
-      name: kratos
-  - patch: |
-      - op: add
-        path: /spec/template/spec/initContainers/0/volumeMounts/-
-        value:
-          mountPath: /etc/kratos-jsonnet
-          name: kratos-jsonnet
-          readOnly: true
-      - op: add
-        path: /spec/template/spec/containers/0/volumeMounts/-
-        value:
-          mountPath: /etc/kratos-jsonnet
-          name: kratos-jsonnet
-          readOnly: true
-      - op: add
-        path: /spec/template/spec/containers/1/volumeMounts/-
-        value:
-          mountPath: /etc/kratos-jsonnet
-          name: kratos-jsonnet
-          readOnly: true
-      - op: add
-        path: /spec/template/spec/volumes/-
-        value:
-          configMap:
-            defaultMode: 0444
-            items:
-              - key: debug.jsonnet
-                path: debug.jsonnet
-              - key: google.jsonnet
-                path: google.jsonnet
-            name: kratos-jsonnet
-            optional: false
-          name: kratos-jsonnet
-    target:
-      kind: Deployment
-      name: kratos
 
 namespace: auth
