chore: log response headers and add ws path match to ente

--- a/ansible/newsletter-server/haproxy.cfg
+++ b/ansible/newsletter-server/haproxy.cfg
@@ -55,7 +55,8 @@ frontend http
   bind :80
 
   http-request set-var(txn.req_hdrs) req.hdrs
-  log-format "${HAPROXY_HTTP_LOG_FMT} hdrs:%{+Q}[var(txn.req_hdrs)]"
+  http-response set-var(txn.resp_hdrs) res.hdrs
+  log-format "${HAPROXY_HTTP_LOG_FMT} req_hdrs:%{+Q}[var(txn.req_hdrs)] resp_hdrs:%{+Q}[var(txn.resp_hdrs)]"
 
   acl local_block_cf_ip hdr_ip(cf-connecting-ip) -f /etc/haproxy/blocklist_ips.lst
   acl local_block_xff_ip hdr_ip(x-forwarded-for) -f /etc/haproxy/blocklist_ips.lst
@@ -79,7 +80,8 @@ frontend https
   bind :443 ssl crt /etc/haproxy/certs/ alpn h2,http/1.1
 
   http-request set-var(txn.req_hdrs) req.hdrs
-  log-format "${HAPROXY_HTTP_LOG_FMT} hdrs:%{+Q}[var(txn.req_hdrs)]"
+  http-response set-var(txn.resp_hdrs) res.hdrs
+  log-format "${HAPROXY_HTTP_LOG_FMT} req_hdrs:%{+Q}[var(txn.req_hdrs)] resp_hdrs:%{+Q}[var(txn.resp_hdrs)]"
 
   acl local_block_cf_ip hdr_ip(cf-connecting-ip) -f /etc/haproxy/blocklist_ips.lst
   acl local_block_xff_ip hdr_ip(x-forwarded-for) -f /etc/haproxy/blocklist_ips.lst
