--- a/blueprints/hcloud-csi-driver/helmrelease.yml
+++ b/blueprints/hcloud-csi-driver/helmrelease.yml
@@ -13,10 +13,11 @@ spec:
       version: 2.x
   install:
     createNamespace: true
-  interval: 1h
+  interval: 30m
   releaseName: hcloud-csi-driver
   targetNamespace: kube-system
   valuesFrom:
     - kind: ConfigMap
       name: hcloud-csi-driver-values
   suspend: false
+  timeout: 10m
