--- a/blueprints/victoria-metrics-k8s-stack/helmrelease.yml
+++ b/blueprints/victoria-metrics-k8s-stack/helmrelease.yml
@@ -14,7 +14,7 @@ spec:
       version: 0.x
   install:
     createNamespace: true
-  interval: 1h
+  interval: 30m
   releaseName: victoria-metrics-k8s-stack
   targetNamespace: monitoring
   upgrade:
@@ -27,3 +27,4 @@ spec:
     - kind: ConfigMap
       name: victoria-metrics-k8s-stack
   suspend: false
+  timeout: 10m
