--- a/kubernetes/newsletter-server/gitops/helm-repositories.yml
+++ b/kubernetes/newsletter-server/gitops/helm-repositories.yml
@@ -6,7 +6,7 @@ metadata:
   namespace: flux-system
 spec:
   force: false
-  interval: 1h
+  interval: 5m
   path: ./kubernetes/newsletter-server/helm-repositories
   prune: true
   sourceRef:
@@ -15,5 +15,5 @@ spec:
     namespace: flux-system
   suspend: false
   targetNamespace: flux-system
-  timeout: 1m
+  timeout: 10m
   wait: false
