--- a/kubernetes/newsletter-server/gitops/oathkeeper-maester.yml
+++ b/kubernetes/newsletter-server/gitops/oathkeeper-maester.yml
@@ -6,7 +6,7 @@ metadata:
   namespace: flux-system
 spec:
   force: true
-  interval: 1h
+  interval: 5m
   path: ./kubernetes/newsletter-server/auth/oathkeeper-maester
   prune: true
   sourceRef:
@@ -15,5 +15,5 @@ spec:
     namespace: flux-system
   suspend: false
   targetNamespace: auth
-  timeout: 5m
+  timeout: 10m
   wait: true
