--- a/kubernetes/newsletter-server/gitops/secured-httproutes.yml
+++ b/kubernetes/newsletter-server/gitops/secured-httproutes.yml
@@ -6,7 +6,7 @@ metadata:
   namespace: flux-system
 spec:
   force: false
-  interval: 1h
+  interval: 5m
   path: ./kubernetes/newsletter-server/auth/secured-httproutes
   prune: true
   sourceRef:
@@ -14,5 +14,5 @@ spec:
     name: flux-system
     namespace: flux-system
   suspend: false
-  timeout: 5m
+  timeout: 10m
   wait: true
