fix: disable cleanup orphan objects

--- a/blueprints/ente-server/config.yml
+++ b/blueprints/ente-server/config.yml
@@ -28,7 +28,7 @@ internal:
   silent: false
 jobs:
   clear-orphan-objects:
-    enabled: true
+    enabled: false
     prefix: ""
   cron:
     skip: false
