Revert "fix(monitoring): pin alloy to a working version"
This reverts commit ba30c3405416abcb66b611787d69bd8b49ae5ea5.

--- a/blueprints/alloy/helmrelease.yml
+++ b/blueprints/alloy/helmrelease.yml
@@ -11,7 +11,7 @@ spec:
         kind: HelmRepository
         name: grafana
         namespace: flux-system
-      version: 0.12.5
+      version: 0.x
   install:
     createNamespace: true
   interval: 30m
