fix: update headlamp helm repository to k8s sigs

--- a/blueprints/headlamp/helmrepository.yml
+++ b/blueprints/headlamp/helmrepository.yml
@@ -5,4 +5,4 @@ metadata:
 spec:
   interval: 1h
   provider: generic
-  url: https://headlamp-k8s.github.io/headlamp/
+  url: https://kubernetes-sigs.github.io/headlamp/
