chore: allow password authentication on hoarder

--- a/blueprints/hoarder/configs.env
+++ b/blueprints/hoarder/configs.env
@@ -1,8 +1,8 @@
 BROWSER_WEB_URL=http://localhost:9222
 CRAWLER_NUM_WORKERS=8
 DATA_DIR=/data
-DISABLE_PASSWORD_AUTH=true
-DISABLE_SIGNUPS=false
+DISABLE_PASSWORD_AUTH=false
+DISABLE_SIGNUPS=true
 MAX_ASSET_SIZE_MB=128
 MEILI_ADDR=http://localhost:7700
 MEILI_ENV=production
