--- a/blueprints/victoria-metrics-k8s-stack/helm-values.yml
+++ b/blueprints/victoria-metrics-k8s-stack/helm-values.yml
@@ -960,6 +960,7 @@ prometheus-node-exporter:
   extraArgs:
     - --collector.filesystem.ignored-mount-points=^/(dev|proc|sys|var/lib/docker/.+|var/lib/kubelet/.+)($|/)
     - --collector.filesystem.ignored-fs-types=^(autofs|binfmt_misc|bpf|cgroup2?|configfs|debugfs|devpts|devtmpfs|fusectl|hugetlbfs|iso9660|mqueue|nsfs|overlay|proc|procfs|pstore|rpc_pipefs|securityfs|selinuxfs|squashfs|sysfs|tracefs)$
+    - --collector.systemd
   # -- Node Exporter VM scrape config
   vmScrape:
     # whether we should create a service scrape resource for node-exporter
