--- a/blueprints/victoria-metrics-k8s-stack/helm-values.yml
+++ b/blueprints/victoria-metrics-k8s-stack/helm-values.yml
@@ -969,6 +969,16 @@ prometheus-node-exporter:
       mountPath: /var/run/dbus
       type: DirectoryOrCreate
       readOnly: true
+    - name: systemd
+      hostPath: /run/systemd
+      mountPath: /run/systemd
+      type: DirectoryOrCreate
+      readOnly: true
+    - name: machine-id
+      hostPath: /etc/machine-id
+      mountPath: /etc/machine-id
+      type: FileOrCreate
+      readOnly: true
 
   vmScrape:
     # whether we should create a service scrape resource for node-exporter
