--- a/blueprints/hoarder/kustomization.yml
+++ b/blueprints/hoarder/kustomization.yml
@@ -19,13 +19,12 @@ resources:
   - vmservicescrape.yml
 
 images:
-  - name: ghcr.io/hoarder-app/hoarder
-    newName: ghcr.io/karakeep-app/karakeep
+  - name: ghcr.io/karakeep-app/karakeep
     newTag: "0.23.2"
   - name: gcr.io/zenika-hub/alpine-chrome
     newTag: "124"
   - name: getmeili/meilisearch
-    newTag: v1.11.1 # v1.12.4
+    newTag: v1.14.0
 
 labels:
   - includeSelectors: true
